--- a/css/style.css
+++ b/css/style.css
@@ -45,5 +45,8 @@ img{
     text-align: left;
     color: teal;
     background-color: thistle;
+    font: 1em sans-serif;
+    font-size: small;
+    column-rule-style: dotted;
     
   }
