--- a/css/style.css
+++ b/css/style.css
@@ -1,41 +1,195 @@
 
 body{
-    margin: 50px;
-    color:  rgba(59, 15, 219, 0.966);
-    background-color:  Bisque;
-    font-weight: bold;
-    font-size: 24px;
-    font-style: oblique;
+    margin: auto;
+    color:  #eab676;
+    background-color: #873e23 ;
+    font-weight: 10px;
+    font-size: 20px;
+    font-style :normal;
+    font-family: 'Courgette', cursive;
 }
 
-img{
-    border-image: fill;
-    margin-top: 25px;
-    }
-    
- nav {
-        float: right;
-         margin-right: 1px;
-         font-size: 24px;
-         font-style: oblique;
-          font-weight: bold;
-          color:royalblue ;
-         
-      }
-      header ul li{
-        display: inline-block;
-  
-      }
-  
-  a {
-    text-decoration: none;
-    
-  }
+a {
+  text-decoration: none;
+  text-align: center;
+  color: #FFC48A;;
+}
+
+header {
+  display: grid;
+  grid-template-columns: 80px auto auto;
+  align-items: center;
+  justify-content: space-around;
+  height: 100px;
+  width: 100%;
+  background-color: rgb(92, 29, 5);
+ }
+
+header nav {
+  text-align: right;
+}
+
+header nav a {
+  padding: 10px 20px;
+  display: inline-block;
+  transition: all 500ms;
+  margin-right: 1px;
+  font-size: 24px;
+  font-style: oblique;
+   font-weight: bold;
+ 
+}
+header nav a:hover {
+  color: #c9582c ;
+
+  background-color: #76b5c5;
+}
+
+ .header-logo {
+   width: 250px ;
+   height: 100px;
+ }
+.frontPage {
+  display: grid;
+   grid-template-columns: auto auto ;
+  gap: 10px;
+ }
+
+
+
+.HorizantalSection {
+
+  display: grid;
+  grid-template-rows:  auto auto auto ;
+  width: 270px;
+  height: 500px;
+  margin: 15px;
+  padding: 9px;
+    gap: 10px; 
+    text-align: left;
+
+    background-color: rgb(92, 29, 5);
+
+}
+
+.locList {
+  list-style-type:circle;
+  word-spacing: 2%;
+}
+
+.fishHori {
+  align-items: center;
+  width: 200px;
+  height: 120px;
+  margin-left: 30px;
+
+}
+
+.eslamSection {
+  display: grid;
+  grid-template-rows:  auto auto ;
+  width: auto;
+  height: 500px;
+  margin: 15px;
+  padding: 9px;
+  background-color: rgb(207, 149, 73);
+
+}
+
+.familySection {
+
+  display: grid;
+  grid-template-rows:  auto auto ;
+  width: 100%;
+  height: 300px;
+  text-align: center;
 
   
-  
 
+
+}
+
+.familyPic {
+  width: 300px;
+  height: 250px;
+
+}
+
+
+.shopsSection {
+
+  display: grid;
+   grid-template-columns: auto auto ;
+  gap: 10px;
+   border-top: 1px ;
+  border-bottom: 1px ;
+  height: 200px;
+  width: 100%;
+ 
+
+  background-color: rgba(153, 74, 43, 0.733);
+
+}
+
+
+.shirtPic {
+  width: 100px;
+  height: 120px;
+
+
+}
+
+.cookiesSection {
+
+  display: grid;
+  grid-template-rows:  auto auto auto ;
+  width: 100%;
+  height: 200px;
+  text-align: left;
+    margin-left: 20px;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  padding: 5px;
+
+
+}
+
+.cookieImgSec {
   
+  display: grid;
+  grid-template-columns:  auto auto ;
+  width: 50%;
+  height: 120px;
+;
+
+}
+
+.cookieSecImg {
+  width: 100px;
+  height: 120px;
+
+}
+
+.ShirtSection {
+
+  display: grid;
+  grid-template-rows:  20px 120px 60px;
+  width: 100%;
+  height: 200px;
+ 
+  text-align:center;
+  
+  margin-right: 20px;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  padding: 5px;
+}
+
+
+.salesMain {
+  width: auto;
+  height: auto;
+}
   
   table, th, td {
     border: 1px solid rgb(230, 216, 25);
@@ -49,4 +203,12 @@ img{
     font-size: small;
     column-rule-style: dotted;
     
+  }
+
+  footer {
+
+    height: 20px;
+    width: 100%;
+    background-color: rgb(92, 29, 5);
+
   }
