--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,131 @@
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Raleway", sans-serif; }
+
+
 
 body{
     margin: auto;
-    color:  #eab676;
-    background-color: #873e23 ;
+    background-color:  #fafbfc; ;
     font-weight: 10px;
-    font-size: 20px;
-    font-style :normal;
-    font-family: 'Courgette', cursive;
+    font-size: 25px;
+    font-style:italic;
+      font-family: 'Bradley Hand, cursive';
+   color: #272829;
 }
 
 a {
   text-decoration: none;
   text-align: center;
-  color: #FFC48A;;
+  color: #149ddd;
+}
+
+a:hover {
+  color: #37b3ed;
+  text-decoration: none;
 }
 
 header {
-  display: grid;
-  grid-template-columns: 80px auto auto;
+  
   align-items: center;
   justify-content: space-around;
-  height: 100px;
-  width: 100%;
-  background-color: rgb(92, 29, 5);
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 300px;
+    transition: all ease-in-out 0.5s;
+    z-index: 9997;
+    transition: all 0.5s;
+    padding: 0 15px;
+    background: #060c14;
+    overflow-y: auto;
+    height: auto;
+ 
  }
+
+
+ header .profile #profileImg {
+  margin: 15px auto;
+  display: block;
+  width: 170px;
+  height: 150px;
+  border: 2px solid #2c2f3f;
+  border-radius: 50%;
+}
+
+.socialLinks{
+
+  margin-left: 80px;
+  margin-top: 15px;
+  width: 170px;
+  height: 80px;
+}
+
+
+.socialLinks img{
+
+  display: block;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  align-items: center;
+}
+.navMenu {
+  margin-top: 7px;
+    padding-top: 5px;
+   
+}
+
+.navMenu img {
+  margin: 7px auto;
+  display: block;
+  width: 45px;
+  height: 35px;
+  border: 2px solid #2c2f3f;
+  border-radius: 50%;
+  padding: 1px;
+}
+header .profile h1 {
+  font-size: 24px;
+  margin: 0;
+  padding: 0;
+  font-weight: 600;
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  text-transform: uppercase;
+}
+
+header .profile h1 a, header .profile h1 a:hover {
+  color: #fff;
+  text-decoration: none;
+}
+
+header .profile .socialLinks a {
+  font-size: 18px;
+  margin: auto auto;
+  display: inline-block;
+  background: #212431;
+  color: #fff;
+  border-radius: 50%;
+  text-align: center;
+  width: 35px;
+  height: 35px;
+  transition: 0.3s;
+}
+
+header .profile .socialLinks a:hover {
+  background: #149ddd;
+  color: #fff;
+  text-decoration: none;
+}
+
 
 header nav {
   text-align: right;
 }
 
 header nav a {
-  padding: 10px 20px;
+  padding: 5px 10px;
   display: inline-block;
   transition: all 500ms;
   margin-right: 1px;
@@ -45,32 +140,51 @@ header nav a:hover {
   background-color: #76b5c5;
 }
 
- .header-logo {
-   width: 250px ;
-   height: 100px;
- }
-.frontPage {
-  display: grid;
-   grid-template-columns: auto auto ;
-  gap: 10px;
- }
-
-
-
-.HorizantalSection {
-
-  display: grid;
-  grid-template-rows:  auto auto auto ;
-  width: 270px;
-  height: 500px;
-  margin: 15px;
-  padding: 9px;
-    gap: 10px; 
-    text-align: left;
-
-    background-color: rgb(92, 29, 5);
+.header-logo{
+margin-top: 10px;
+margin-bottom: 70px;
 
 }
+
+ .header-logo img {
+   width: 250px ;
+   height: 80px;
+   float: left;
+ }
+
+
+
+.navMenu * {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.navMenu > ul > li {
+  position: relative;
+  white-space: nowrap;
+}
+
+.navMenu > ul > li > img{
+
+  width: 25px;
+  height: 25px;
+  float: left;
+}
+
+.navMenu a {
+  display: flex;
+  align-items: center;
+  color: #a8a9b4;
+  padding: 12px 15px;
+  margin-bottom: 8px;
+  transition: 0.3s;
+  font-size: 15px;
+}
+
+
+
+
 
 .locList {
   list-style-type:circle;
@@ -85,34 +199,47 @@ header nav a:hover {
 
 }
 
-.eslamSection {
-  display: grid;
-  grid-template-rows:  auto auto ;
-  width: auto;
-  height: 500px;
-  margin: 15px;
-  padding: 9px;
-  background-color: rgb(207, 149, 73);
-
+.homeMain{
+background-size: cover;
+background-repeat: no-repeat;
+background-position: center center;
+margin-top: 0px;
+margin-bottom: 0px;
+height: 700px;
+width: 100%;
+margin-left: 301px;
+margin-right: 0px;
 }
+
 
 .familySection {
 
-  display: grid;
-  grid-template-rows:  auto auto ;
-  width: 100%;
-  height: 300px;
-  text-align: center;
+   width: auto;
+   text-align: center;
+  align-items: center;
+  justify-content: space-around;
+position: sticky;
+    top: 50px;
+    margin-left: 0px;
+    margin-right: 0px;
+       bottom: 0;
+    transition: all ease-in-out 0.5s;
+    z-index: 9997;
+    transition: all 0.5s;
+    padding: 0 15px;
+    overflow-y: auto;
+    }
 
-  
-
-
-}
 
 .familyPic {
-  width: 300px;
-  height: 250px;
+  width: 600px;
+  height: 550px;
+  margin-left: 0px;
+  margin-top: 20px;
 
+}
+.familySection h1 {
+  display:block;
 }
 
 
@@ -185,29 +312,200 @@ header nav a:hover {
   padding: 5px;
 }
 
-#locForm{
-  display: block;
+
+  footer {
+    margin-top: 150px;
+    padding: 2px;
+    color: #f4f6fd;
+      font-size: 14px;
+      position: fixed;
+      left: 0;
+      bottom: 0;
+      width: 300px;
+      z-index: 9999;
+      background: #040b14;
+    text-align: center;
+
+  }
+
+.locationPage{
+  align-items: center;
+  justify-content: space-around;
+    position: fixed;
+    top: 0px;
+    left: 300px;
+    bottom: 0;
+    margin-top: 0px;
+    transition: all ease-in-out 0.5s;
+    z-index: 9997;
+    transition: all 0.5s;
+    padding: 0 15px;
+    overflow-y: auto;
+        min-height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    display: grid;
+    grid-template-columns: 30% 70%;
+    width: 1050px;
+    
+}
+
+.mapSec{
+  height: 100%;
+  margin-left: 2px;
+  margin-top: 250px;
+  margin-bottom: 50px;
+  padding-left: 1px;
+}
+
+.locInfoSec{
+  height: 100%;
+    margin-right: 30px;
+  margin-left: 12px;
+  margin-top: 180px;
+  
+}
+
+.contactPage{
+  display: grid;
+  grid-template-columns: 30% 70%;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: space-around;
+    position: relative;
+    top: 0px;
+    left: 300px;
+    bottom: 0;
+    transition: all ease-in-out 0.5s;
+    z-index: 9997;
+    transition: all 0.5s;
+    padding: 0 1px;
+    overflow-y: auto;
+    min-height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+.contactHero{
+width: 55%;
+height: 100%;
+margin-top: 5px;
+margin-bottom: 2px;
+margin-left: 20px;
+padding: 1px;
+
+}
+
+#contactHro{
+  width: 450px;
+  height: 450px;
+}
+
+.contInfoSec{
+
+  width: 350px;
+height: 100%;
+margin-top: 100px;
+margin-bottom: 2px;
+margin-left: 1px;
+padding: 1px;
+}
+
+
+
+
+#mainSec{
+  margin-left: 305px;
+  position: relative;
+  display: grid;
+    grid-template-rows: auto auto;
+  align-items: center;
+  justify-content: space-around;
+    top: 0px;
+    right: 0px;
+    width: 100%;
+    margin-top: 0px;
+    transition: all ease-in-out 0.5s;
+    transition: all 0.5s;
+    padding: 0 10px;
+    background: #76787a;
+    height: 100%;
+}
+
+.newlocSec{
+  height: 50% ;
+  width: 100%;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  margin-left: 15px;
+}
+
+.newlocSec fieldset {
+  margin-left: 50px;
+  border: 2px solid ;
+  border-radius: 5px;
+}
+
+.salesMain {
+  width: 100%;
+  height: 50%;
+  margin-left: 15px;
+}
+
+.salesMain table {
+  margin-left: 150px;
+}
+
+
+.locForm{
   font-family: monospace; 
   font-weight: small;
   font-style: oblique;
   font-size: 20px;
-  width: 100px;
-  height: 80px;
-  margin-left: 2px;
+    margin-left: 2px;
   margin-right: 2px;
+  margin-bottom: 50px;
   padding-top: 0.35em;
   padding-bottom: 0.625em;
   padding-left: 0.75em;
   padding-right: 0.75em;
-  border: 2px groove (internal value);
+  border: 2px solid (internal value);
+  border-radius: 5px;
+}
+
+.newlocSec legend{
+  
+    display: block;
+    padding-left: 12px;
+    padding-right: 12px;
+    border: 2px solid rgb(65, 63, 63);
+    background-color: rgb(230, 106, 5);
+    color:rgb(105, 103, 104);;
+    
+}
+
+.inputForm{
+
+ 
+  margin-left: 10px;
+  align-items: center;
+    width: 100px;
+  height: 25px;
+
+
 }
 
 form label {
-  display: inline;
-  font-family: monospace; 
   font-weight: small;
   font-style: oblique;
   font-size: 20px;
+}
+
+input.submit {
+  margin-left: 50px;
 }
 
 input.submit:hover {
@@ -219,20 +517,17 @@ input.submit:active {
 }
 
 
-.salesMain {
-  width: auto;
-  height: auto;
-}
+
 
 .salesheading2{
   margin-top: 2px;
   margin-bottom: 20px;
-  margin-left: 250px;
-  margin-right: 160px;
+  margin-left: 25px;
+  margin-right: 16px;
      padding: 20px;
     text-align: center;
-    color: rgb(151, 10, 64);
-    background-color: rgb(216, 164, 122);
+    color: rgb(105, 103, 104);
+    background-color: rgb(230, 106, 5);
     font: 1em sans-serif;
     font-size: 20px;
 
@@ -240,32 +535,23 @@ input.submit:active {
 }
   
   table, th, td {
-    border: 1px solid rgb(230, 216, 25);
+    border: 2px dotted rgb(145, 144, 140);
     height: 40px ; 
-    width: 40px;
+    width: 45px;
     padding: 15px;
     text-align: left;
-    color: teal;
-    background-color: thistle;
+    color: rgb(107, 110, 110);
+    background-color: rgb(167, 217, 230);
     font: 1em sans-serif;
     font-size: small;
     column-rule-style: dotted;
     margin-top: 2px;
-    margin-bottom: 80px;
-    margin-left: 250px;
-    margin-right: 20px;
+    margin-bottom: 8px;
+    margin-right: 2px;
     padding-top: 0.35em;
     padding-bottom: 0.625em;
     padding-left: 0.75em;
     padding-right: 0.75em;
 
     
-  }
-
-  footer {
-
-    height: 20px;
-    width: 100%;
-    background-color: rgb(92, 29, 5);
-
   }
