--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,8 @@ margin-bottom: 70px;
   align-items: center;
   width: 200px;
   height: 120px;
-  margin-left: 30px;
+  margin-left: 20px;
+  transform: rotate(50deg);
 
 }
 
@@ -242,29 +243,27 @@ position: sticky;
   display:block;
 }
 
+.shopPage{
 
-.shopsSection {
-
-  display: grid;
-   grid-template-columns: auto auto ;
-  gap: 10px;
-   border-top: 1px ;
-  border-bottom: 1px ;
-  height: 200px;
-  width: 100%;
- 
-
-  background-color: rgba(153, 74, 43, 0.733);
+  background-size: cover;
+background-repeat: no-repeat;
+background-position: center center;
+margin-top: 0px;
+margin-bottom: 0px;
+height: 700px;
+width: 950px;
+margin-left: 301px;
+margin-right: 0px;
 
 }
+
 
 
 .shirtPic {
   width: 100px;
   height: 120px;
-
-
-}
+  margin-top: 30px;
+border: 1px solid ;}
 
 .cookiesSection {
 
@@ -272,8 +271,7 @@ position: sticky;
   grid-template-rows:  auto auto auto ;
   width: 100%;
   height: 200px;
-  text-align: left;
-    margin-left: 20px;
+  margin-left: 301px;
   margin-bottom: 5px;
   margin-top: 5px;
   padding: 5px;
@@ -287,13 +285,17 @@ position: sticky;
   grid-template-columns:  auto auto ;
   width: 50%;
   height: 120px;
-;
+margin-left: 80px;
+
 
 }
 
 .cookieSecImg {
   width: 100px;
   height: 120px;
+  margin-top: 20px;
+transform: rotate(5deg);
+border: 1px  teal;
 
 }
 
@@ -303,12 +305,12 @@ position: sticky;
   grid-template-rows:  20px 120px 60px;
   width: 100%;
   height: 200px;
+  margin-top: 80px;
  
   text-align:center;
   
   margin-right: 20px;
   margin-bottom: 5px;
-  margin-top: 5px;
   padding: 5px;
 }
 
